--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -198,6 +198,9 @@ header {
 .span_two_col {
   grid-column:  1 / 3;
 }
+.span_three_col {
+  grid-column: 1 / 4;
+}
 
 .w-200px {
   width: 200px !important;
