--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -293,3 +293,19 @@ p {
 .m-0-all {
   margin: 0;
 }
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mb-2 {
+  margin-bottom: .25em !important;
+}
+
+button:hover {
+  cursor: pointer;
+}
