feature : add new event Seer's Sacrifice - helper_lib/getIndexOfArrayItemBykey now returns -1 if not found - feature : add generateEvent func to handle randomly selecting event, data/environement now stores BASE_EVENTS and LATE_EVENTS, once past level 15, LATE_EVENTS can begin to generate - feature : Modal is now slightly wider -

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -333,3 +333,10 @@ body {
   border: 2px solid black;
   border-radius: 12px;
 }
+
+ul {
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
