formatting and styling - parentmost div in <App is now vh 100, vw100 and clip all overflow to fit game window to viewport as foundation for responsiveness - other elements reworked to use vh height and sit within newly styled parent

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -22,8 +22,28 @@ body {
   width: 0px;
 }
 
-w-vw-100: {
+.w-vw-100: {
   width: 100vw;
+}
+
+.w-vw-98: {
+  width: 98vw;
+}
+
+.h-vh-50 {
+  height: 50vh;
+}
+
+.h-vh-100 {
+  height: 100vh;
+}
+
+.h-top-bar-minus-remainder {
+  height: calc(100vh - 60px)
+}
+
+.h-100 {
+  height: 100%;
 }
 
 .five_col_equal {
