feature : add game_parent_container class to top level div and add max height and width to handle very large screen responsiveness - feature : improve styling of fan-effect cards, now styled using top instead of bottom as it is simpler, improve left calculation based on number of cards in hand, min and max rotate change if only two cards in hand, overall responsiveness improved

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -421,3 +421,10 @@ ul {
   z-index: 10;
   position: relative;
 }
+
+.game_parent_container {
+  overflow-y: clip;
+  overflow-x: clip;
+  max-width: 1440px;
+  max-height: 1000px;
+}
