--- a/public/styles.css
+++ b/public/styles.css
@@ -425,6 +425,6 @@ ul {
 .game_parent_container {
   overflow-y: clip;
   overflow-x: clip;
-  max-width: 1440px;
-  max-height: 1000px;
+  max-width: 100vw;
+  max-height: 100vh;
 }
