refactor : add combat_rewards lib with funcs from combat - fix : eliminate need for second click in Trapfall event - feature : TopBar now displays char stat_increases values added to base values, with color style if they are enhanced - fix : Rage card now gives defense instead of defend

--- a/public/styles.css
+++ b/public/styles.css
@@ -428,3 +428,9 @@ ul {
   max-width: 100vw;
   max-height: 100vh;
 }
+
+.yellow_action_button {
+  background-color: #ffb703;
+  border: 2px groove #fb8500;
+  box-shadow: 2px 3px darkgrey;
+}
