feature : Buffs now displays buff icon with popover giving explanation of the buff - feature : cleanup Buffs/Healthbar spacings and alignment chore : remove unused - fix : fix basketball item speed value

--- a/public/styles.css
+++ b/public/styles.css
@@ -491,3 +491,16 @@ ul {
   border: 2px groove #970F08;
   box-shadow: 2px 3px darkgrey;
 }
+
+.buff_image {
+  height: 35px;
+  width: auto;
+}
+
+.pt-0 {
+  padding-top: 0;
+}
+
+.m-0-auto {
+  margin: 0 auto;
+}
