fix : fit fatal error on selecting Cards in SeersSacrifice event - feature: Events are now rendered in a newly sized Modal with opaque background - feature : GemCounter can now be given a maximum - feature: inactive and selected rgba colors moved to environment file - feature : clean up formatting, layout and sizing of SeersSacrifice event

--- a/public/styles.css
+++ b/public/styles.css
@@ -42,6 +42,10 @@ body {
   height: calc(100vh - 60px)
 }
 
+.h-top-bar-minus-remainder-90 {
+  height: calc(90vh - 60px)
+}
+
 .h-100 {
   height: 100%;
 }
